--- a/index.html
+++ b/index.html
@@ -854,7 +854,7 @@
 <p>Este espacio está dedicado a los alumnos y alumnas de los <strong>Ciclos Formativos de Informática (DAM, DAW y ASIR)</strong>.
 Aquí encontrarás el material oficial de clase, elaborado para acompañar las explicaciones, prácticas y proyectos que realizamos a lo largo del curso.</p>
 <p>El objetivo es ofrecer un recurso abierto, claro y práctico, donde puedas repasar los contenidos, practicar con ejemplos reales y consultar soluciones o guías paso a paso.</p>
-<p>📚 ¿Qué encontrarás aquí?</p>
+<p>📚 ¿Qué encontrarás por aquí?</p>
 <p>Apuntes de cada módulo: explicaciones teóricas, esquemas, resúmenes y enlaces de interés.</p>
 <p>Ejercicios prácticos: propuestas para desarrollar tus competencias técnicas.</p>
 <p>Soluciones orientativas: ejemplos de resolución comentados, para que puedas contrastar tu trabajo.</p>
