docs: otro cambio de ejemplo

--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@ Aquí encontrarás el material oficial de clase, elaborado para acompañar las e
 <p>✨ Los ejemplos de Python se pueden <strong>ejecutar en el navegador</strong> gracias a Thebe + Pyodide.
 Para otros lenguajes, encontrarás <em>iframes</em> de Replit/StackBlitz o bloques interactivos.</p>
 </blockquote>
-<h2 id="estructura">Estructura</h2>
+<h2 id="estructura">Estructuras</h2>
 <ul>
 <li><strong>ASIR</strong> 1º: GBBDD</li>
 <li><strong>ASIR</strong> 2º: SRI</li>
