docs: Nombre de profe

--- a/index.html
+++ b/index.html
@@ -850,7 +850,7 @@
 
 
 <h1 id="repodocente">Repodocente</h1>
-<p>Bienvenidos a los Apuntes del Profesor</p>
+<p>Bienvenidos a los Apuntes del Profesor Jose</p>
 <p>Este espacio está dedicado a los alumnos y alumnas de los <strong>Ciclos Formativos de Informática (DAM, DAW y ASIR)</strong>.
 Aquí encontrarás el material oficial de clase, elaborado para acompañar las explicaciones, prácticas y proyectos que realizamos a lo largo del curso.</p>
 <p>El objetivo es ofrecer un recurso abierto, claro y práctico, donde puedas repasar los contenidos, practicar con ejemplos reales y consultar soluciones o guías paso a paso.</p>
